--- a/WinRomEmu/WinRomEmu.csproj
+++ b/WinRomEmu/WinRomEmu.csproj
@@ -34,22 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="RomDownloader-build\HtmlAgilityPack.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="RomDownloader-build\RomDownloader.deps.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="RomDownloader-build\RomDownloader.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="RomDownloader-build\RomDownloader.exe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="RomDownloader-build\RomDownloader.pdb">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="RomDownloader-build\RomDownloader.runtimeconfig.json">
+    <None Update="RomDownloader-build.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
